# quote

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.arm  Dockerfile.nginx  Dockerfile.uwsgi  Jenkinsfile  README.md  docker-compose.yml  generate_load.py  load_initial_data.py  manage.py  pyproject.toml  randomquotes.csv  requirements-in.txt  requirements.txt  tox.ini
bleemeo_quote/: models.py  urls.py  views.py  wsgi.py
bleemeo_quote/migrations/: 0001_initial.py
bleemeo_quote/settings/: base.py  development.py  production.py
deploy/: quote.bleemeo.com  run-uwsgi.sh  uwsgi.ini
k8s/: load-generator.yaml  nginx.yaml  postgres.yaml  quote.yaml  redis.yaml
